[docs] Deleted slides

--- a/adversarial_attacks_homework.ipynb
+++ b/adversarial_attacks_homework.ipynb
@@ -210,7 +210,7 @@
     "                for i in range(1,T+1):\n",
     "                    alpha = eps / float(i)\n",
     "                    gradient = tf.gradients(loss, adv_x)\n",
-    "                    norm_gradient = tf.norm(gradient, ord=1, axis=1) #TODO\n",
+    "                    norm_gradient = tf.norm(gradient, ord=1, axis=1) \n",
     "                    g = miu*g + (gradient/norm_gradient)\n",
     "                    \n",
     "                    signed_grad = tf.sign(g)[0]\n",
@@ -221,32 +221,49 @@
     "\n",
     "                adv_image = adv_x\n",
     "                \n",
-    "            elif attack_method=='ensemble':\n",
+    "            elif attack_method=='MIFGSM_ensemble':\n",
     "                print(str(T) + ' iterations' + ' miu=' + str(miu))\n",
-    "                \n",
-    "                prediction1 = nets.MobileNet25(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction2 = nets.MobileNet50(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction3 = nets.MobileNet75(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction4 = nets.MobileNet100(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction5 = nets.MobileNet35v2(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction6 = nets.MobileNet50v2(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction7 = nets.MobileNet75v2(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction8 = nets.MobileNet100v2(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction9 = nets.MobileNet130v2(input_image, reuse=tf.AUTO_REUSE)\n",
-    "                prediction10 = nets.MobileNet140v2(input_image, reuse=tf.AUTO_REUSE)\n",
     "                \n",
     "                adv_x = input_image\n",
     "                g=0\n",
     "                for i in range(1,T+1):\n",
     "                    alpha = eps / float(i)\n",
     "                    gradient = tf.gradients(loss, adv_x)\n",
+    "                    norm_gradient = tf.norm(gradient, ord=1, axis=1) \n",
+    "                    g = miu*g + (gradient/norm_gradient)\n",
+    "                    \n",
     "                    signed_grad = tf.sign(gradient)[0]\n",
     "                    adv_x = adv_x + alpha * signed_grad\n",
     "                    adv_x = tf.clip_by_value(adv_x, -1, 1)\n",
-    "\n",
-    "                    prediction = (prediction1 + prediction2 + prediction3 + prediction4 + prediction5 + prediction6 + prediction7 + prediction8 + prediction9 + prediction10)/10\n",
-    "\n",
-    "                    loss = self.loss_object(input_label, prediction)\n",
+    "                    \n",
+    "                    prediction1 = nets.MobileNet25(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction2 = nets.MobileNet50(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction3 = nets.MobileNet75(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction4 = nets.MobileNet100(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction5 = nets.MobileNet35v2(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction6 = nets.MobileNet50v2(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction7 = nets.MobileNet75v2(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction8 = nets.MobileNet100v2(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction9 = nets.MobileNet130v2(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    prediction10 = nets.MobileNet140v2(input_image, reuse=tf.AUTO_REUSE)\n",
+    "                    \n",
+    "                    # Ensemble loss\n",
+    "                    loss1 = self.loss_object(input_label, prediction1)\n",
+    "                    loss2 = self.loss_object(input_label, prediction2)\n",
+    "                    loss3 = self.loss_object(input_label, prediction4)\n",
+    "                    loss4 = self.loss_object(input_label, prediction4)\n",
+    "                    loss5 = self.loss_object(input_label, prediction5)\n",
+    "                    loss6 = self.loss_object(input_label, prediction6)\n",
+    "                    loss7 = self.loss_object(input_label, prediction7)\n",
+    "                    loss8 = self.loss_object(input_label, prediction8)\n",
+    "                    loss9 = self.loss_object(input_label, prediction9)\n",
+    "                    loss10 = self.loss_object(input_label, prediction10)\n",
+    "                    \n",
+    "                    w = [0.20, 0.25, 0.30, 0.25, 0.26, 0.20, 0.10, 0.20, 0.15, 0.20]\n",
+    "                    loss = - w[0]*loss1 + w[1]*loss2 + w[2]*loss3 + w[3]*loss4 + w[4]*loss5 + w[5]*loss6 + \n",
+    "                            w[6]*loss7 + w[7]*loss + w[8]*loss9 + w[9]*loss10\n",
+    "                \n",
+    "                adv_image = adv_x\n",
     "        # END TODO\n",
     "        \n",
     "        return adv_image"
@@ -749,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
